# krux-linkmapper

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt
client/: style.css
old/: KRUX-link-mapper-vibes.html
server/: cli.py  config.py  crawler.py  main.py
server/client/: app.js  graph.js  index.html  renderer.js  style.css
