[project]
name = "krux-linkmapper"
version = "0.1.0"
description = "terminalcore link mapper // crawl the web as a force graph"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
gui = ["pywebview>=4"]

[project.scripts]
krux = "server.cli:main"

[tool.setuptools.packages]
find = { include = ["server*"] }

[tool.setuptools.package-data]
server = ["client/*.html", "client/*.js", "client/*.css", "client/*.png"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
